--- a/changelog.html
+++ b/changelog.html
@@ -171,12 +171,20 @@
 <p>Total number of changed sets: 1</p>
 <div class="section">
 <h3>Changes between 2015-06-27 and 2015-07-28<a name="Changes_between_2015-06-27_and_2015-07-28"></a></h3>
-<p>Total commits: 28<br />Total number of files changed: 32</p>
+<p>Total commits: 30<br />Total number of files changed: 32</p>
 <table border="0" class="table table-striped">
 <tr class="a">
 <th>Timestamp</th>
 <th>Author</th>
 <th>Details</th></tr>
+<tr class="b">
+<td>2015-07-27 15:43:23</td>
+<td>Jason Reilly &lt;jdr0887@gmail.com&gt;</td>
+<td><a class="externalLink" href="https://github.com/jdr0887/Hearsay-NCBI-Plugin/src/site/xdoc/commands/PullAlignments.xml">src/site/xdoc/commands/<b>PullAlignments.xml</b></a> <a class="externalLink" href="https://github.com/jdr0887/Hearsay-NCBI-Plugin/src/site/xdoc/commands/PullAlignments.xml?rev=c9b539c12f4564d6a7c1006f906e81608ed057dd&amp;content-type=text/vnd.viewcvs-markup">v c9b539c12f4564d6a7c1006f906e81608ed057dd</a><br /><br />updating</td></tr>
+<tr class="a">
+<td>2015-07-27 15:27:31</td>
+<td>Jason Reilly &lt;jdr0887@gmail.com&gt;</td>
+<td><a class="externalLink" href="https://github.com/jdr0887/Hearsay-NCBI-Plugin/src/site/xdoc/commands/PullGenes.xml">src/site/xdoc/commands/<b>PullGenes.xml</b></a> <a class="externalLink" href="https://github.com/jdr0887/Hearsay-NCBI-Plugin/src/site/xdoc/commands/PullGenes.xml?rev=4dd4e2759ba8a32b4dab5217c4184ae738beaeea&amp;content-type=text/vnd.viewcvs-markup">v 4dd4e2759ba8a32b4dab5217c4184ae738beaeea</a><br /><a class="externalLink" href="https://github.com/jdr0887/Hearsay-NCBI-Plugin/src/site/xdoc/commands/PullGenomeReferences.xml">src/site/xdoc/commands/<b>PullGenomeReferences.xml</b></a> <a class="externalLink" href="https://github.com/jdr0887/Hearsay-NCBI-Plugin/src/site/xdoc/commands/PullGenomeReferences.xml?rev=4dd4e2759ba8a32b4dab5217c4184ae738beaeea&amp;content-type=text/vnd.viewcvs-markup">v 4dd4e2759ba8a32b4dab5217c4184ae738beaeea</a><br /><a class="externalLink" href="https://github.com/jdr0887/Hearsay-NCBI-Plugin/src/site/xdoc/commands/PullReferenceSequences.xml">src/site/xdoc/commands/<b>PullReferenceSequences.xml</b></a> <a class="externalLink" href="https://github.com/jdr0887/Hearsay-NCBI-Plugin/src/site/xdoc/commands/PullReferenceSequences.xml?rev=4dd4e2759ba8a32b4dab5217c4184ae738beaeea&amp;content-type=text/vnd.viewcvs-markup">v 4dd4e2759ba8a32b4dab5217c4184ae738beaeea</a><br /><br />fixing a few typos</td></tr>
 <tr class="b">
 <td>2015-07-27 15:03:35</td>
 <td>Jason Reilly &lt;jdr0887@gmail.com&gt;</td>
