--- a/commands/PullGenes.html
+++ b/commands/PullGenes.html
@@ -154,10 +154,10 @@
 <div class="section">
 <h3>Threading &amp; Synchronization<a name="Threading__Synchronization"></a></h3>
 	
-<p>This plugin assumes that Gene instances may already exist.
+<p>This command assumes that Gene instances may already exist.
 	Therefore, it is written to check for the existence of a Gene
 	by symbol before persisting a new instance.  And since the
-	plugin checks for the existence of previously persisted Gene
+	command checks for the existence of previously persisted Gene
 	instances, multithreading is not used....avoiding race
 	conditions.</p>
       </div>      
