--- a/commands/PullGenomeReferences.html
+++ b/commands/PullGenomeReferences.html
@@ -154,10 +154,10 @@
 <div class="section">
 <h3>Threading &amp; Synchronization<a name="Threading__Synchronization"></a></h3>
 	
-<p>This plugin assumes that GenomeReference instances may
+<p>This command assumes that GenomeReference instances may
 	already exist.  Therefore, it is written to check for the
 	existence of a GenomeReference by symbol before persisting a
-	new instance.  And since the plugin checks for the existence
+	new instance.  And since the command checks for the existence
 	of previously persisted GenomeReference instances,
 	multithreading is not used....avoiding race conditions.</p>
       </div>      
