--- a/commands/PullAlignments.html
+++ b/commands/PullAlignments.html
@@ -201,7 +201,7 @@ GBFFAndFilter gbffFilter = new GBFFAndFilter(filters);
 List&lt;Sequence&gt; sequenceList = gbffMgr.deserialize(gbffFilter, f);
 	</pre></div>
         
-<p>We are effectively filtering out Alignment instances that have:</p>
+<p>We include Alignment instances that have:</p>
 	
 <ul>
 	  
